--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@expo-google-fonts/roboto": "^0.2.2",
     "@hookform/resolvers": "^2.9.11",
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-navigation/bottom-tabs": "^6.5.5",
     "@react-navigation/native": "^6.1.4",
     "@react-navigation/native-stack": "^6.9.10",
+    "axios": "^1.3.4",
     "expo": "~47.0.12",
     "expo-file-system": "~15.1.1",
     "expo-font": "~11.0.1",
